--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="http://www.UandMUN.in">
-		<meta property="og:image" content="http://www.UandMUN.in/img/logo.png">
 		<meta property="og:title" content="UandMUN">
 		<meta property="og:description" content="It is my immense pleasure to invite you to UandMUN's first ever MUN, hosted at JPIS from September 8th to 10th.">
 		<link rel="stylesheet" media="screen" href="css/style.min.css">
@@ -18,15 +17,25 @@
 		<link rel="stylesheet" media="screen and (max-width: 500px)" href="css/mobile.responsive.min.css">
 		<script defer src="js/jquery.min.js"></script>
 		<script defer src="js/dynamic.min.js"></script>
+		<style>
+.parallax {
+    background-image: url("http://www.abc.net.au/news/image/4321948-3x2-940x627.jpg");
+
+    min-height: 500px; 
+
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+</style>
 	</head>
 
 	<body>
-
+<div class="parallax"></div>
 		<section class="hero">
-			<header>
-			</header>
 			<div>
-				<img src="img/logo.svg">
+				<img src="img/logo.png">
 				<br>
 				<h1>U&MUN First Edition</h1>
 			</div>
@@ -99,7 +108,7 @@
 					<h3>OC Head</h3>
 				</a>				
 				<a>
-					<img src="img/secretariat/ShubB.jpeg">
+					<img src="img/secretariat/ShubhB.jpeg">
 					<br>
 					<h2>Shubh Baheti</h2>
 					<br>
