fix for sec link

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				</a>
 			</div>
 			<br>
-			<a href="secretariat.html" target="_blank">More</a>
+			<a href="img/secretariat.html" target="_blank">More</a>
 		</section>
 
 <!--Add the BGs to the href -->
