--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				</a>
 			</div>
 			<br>
-			<a href="img/index.html" target="_blank">More</a>
+			<a href="https://uandmun1.github.io/" target="_blank">More</a>
 		</section>
 
 <!--Add the BGs to the href -->
