--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<section class="welcome">
 			<h1>Welcome</h1>
 			<br>
-			<p>It is my immense pleasure to invite you to UandMUN's first ever MUN, hosted at JPIS from September 8<sup>th</sup> to 10<sup>th</sup>.</p>
+			<p>It is our immense pleasure to invite you to UandMUN's first ever MUN, hosted at JPIS from September 8<sup>th</sup> to 10<sup>th</sup>.</p>
 		</section>
 
 		<section class="update">
@@ -63,10 +63,10 @@
 				<br>
 				<h1>Guides</h1>
 			</a>
-			<a href="pdf/allotments.pdf" target="_blank">
+			<a href="https://uandmun2.github.io/" target="_blank">
 				<span class="ion-ios-flag-outline"></span>
 				<br>
-				<h1>Allotments</h1>
+				<h1>EB</h1>
 			</a>
 			<a href="pdf/rop.pdf" target="_blank">
 				<span class="ion-ios-flag-outline"></span>
